External links parser and model